a proper entry <war crime#99906>

--- a/wiki/war_crime.wikitext
+++ b/wiki/war_crime.wikitext
@@ -1,1 +1,5 @@
-USA
+==English==
+===Noun===
+{{wikipedia}}
+'''[[war]] [[crime]]'''
+# a [[punishable]] [[offense]], under [[international law]], for [[violation]]s of the [[law of war]] by any person or persons, [[military]] or [[civilian]].
