--- a/wiki/ardere.wikitext
+++ b/wiki/ardere.wikitext
@@ -26,12 +26,11 @@
 | colspan="5" | arso
 
 |-
-! colspan="2" style="background:#C0C0C0" |
+! colspan="2" rowspan="2" style="background:#C0C0C0" | person
 ! colspan="3" style="background:#C0C0C0" | singular
 ! colspan="3" style="background:#C0C0C0" | plural
 
 |-
-! colspan="2" style="background:#C0C0C0" | [[person]]
 ! style="background:#C0C0C0;width:12.5%" | first
 ! style="background:#C0C0C0;width:12.5%" | second
 ! style="background:#C0C0C0;width:12.5%" | third
@@ -40,7 +39,7 @@
 ! style="background:#C0C0C0;width:12.5%" | third
 
 |-
-! rowspan="6" style="background:#c0cfe4" | [[indicative]]
+! rowspan="6" style="background:#c0cfe4" | indicative
 
 ! style="background:#c0cfe4" colspan="1" | 
 ! style="background:#c0cfe4" | io
@@ -51,7 +50,7 @@
 ! style="background:#c0cfe4" | loro
 
 |-
-! style="height:3em;background:#c0cfe4" | [[present]]
+! style="height:3em;background:#c0cfe4" | present
 | ardo
 | ardi
 | arde
@@ -60,7 +59,7 @@
 | ardono
 
 |-
-! style="height:3em;background:#c0cfe4" | [[imperfect]]
+! style="height:3em;background:#c0cfe4" | imperfect
 | ardevo
 | ardevi
 | ardeva
@@ -69,7 +68,7 @@
 | ardevano
 
 |-
-! style="height:3em;background:#c0cfe4" | [[passato remoto]]
+! style="height:3em;background:#c0cfe4" | passato remoto
 | arsi
 | ardesti
 | arse
@@ -78,7 +77,7 @@
 | arsero
 
 |-
-! style="height:3em;background:#c0cfe4" | [[future]]
+! style="height:3em;background:#c0cfe4" | future
 | arderò
 | arderai
 | arderà
@@ -87,7 +86,7 @@
 | arderanno
 
 |-
-! style="height:3em;background:#c0cfe4" | [[conditional]]
+! style="height:3em;background:#c0cfe4" | conditional
 | arderei
 | arderesti
 | arderebbe
@@ -96,7 +95,7 @@
 | arderebbero
 
 |-
-! rowspan="3" style="background:#c0e4c0" |[[subjunctive]]
+! rowspan="3" style="background:#c0e4c0" | subjunctive
 ! style="background:#c0e4c0" | 
 ! style="background:#c0e4c0" | che io
 ! style="background:#c0e4c0" | che tu
@@ -106,7 +105,7 @@
 ! style="background:#c0e4c0" | che loro
 
 |-
-! style="height:3em;background:#c0e4c0" | [[present]]
+! style="height:3em;background:#c0e4c0" | present
 | arda
 | arda
 | arda
@@ -115,7 +114,7 @@
 | ardano
 
 |-
-! style="height:3em;background:#c0e4c0" rowspan="1" | [[imperfect]]
+! style="height:3em;background:#c0e4c0" rowspan="1" | imperfect
 | ardessi
 | ardessi
 | ardesse
@@ -124,7 +123,7 @@
 | ardessero
 
 |-
-! style="background:#e4d4c0" colspan="2" | 
+! colspan="2" rowspan="2" style="height:3em;background:#e4d4c0" | imperative
 ! style="background:#e4d4c0" | -
 ! style="background:#e4d4c0" | tu
 ! style="background:#e4d4c0" | lui/lei
@@ -133,7 +132,6 @@
 ! style="background:#e4d4c0" | loro
 
 |-
-! colspan="2" style="height:3em;background:#e4d4c0" | [[imperative]]
 |
 | ardi
 | arda
