--- a/wiki/arse.wikitext
+++ b/wiki/arse.wikitext
@@ -31,3 +31,10 @@ See [[ass]]
 #:''I can't be arsed to write that essay for tomorrow.''
 
 [[Category:English vulgarities]]
+----
+
+==Italian==
+===Verb form===
+'''arse'''
+
+# ''third-person singular indicative past historic of [[ardere]]''
