--- a/wiki/file_extension.wikitext
+++ b/wiki/file_extension.wikitext
@@ -4,6 +4,20 @@
 # A short series of letters or numerals at the end of a [[computer]] file name, used to indicate the type of file and the [[software]] that will be required to operate or open it.
 #: ''A text file will have a '''file extension''' of .txt.''
 
+===Translations===
+*[[Chinese]]: [[文件扩展名]] (wenjian kuozhan ming)
+*[[Danish]]: [[filtype]]
+*[[Dutch]]: [[bestandsextensie]]
+*[[Finnish]]: [[tiedostopääte]]
+*[[French]]: [[extension de fichier]]
+*[[German]]: [[Dateiendung]]
+*[[Italian]]: [[estensione di nome di schedario]]
+*[[Japanese]]: [[拡張子]] (かくちょうし kakuch&#333;shi)
+*[[Polish]]: [[rozszerzenie]]
+*[[Portuguese]]: [[extensão do nome de ficheiro]]
+*[[Russian]]: [[дополнение к файлу]] (dopolneniye k faylu)
+*[[Spanish]]: [[extensión de archivo]]
+
 ===Related Terms===
 *[[8.3]]
 *[[filename extension]]
