a proper entry <lower Ivy#99907>

--- a/wiki/lower_Ivy.wikitext
+++ b/wiki/lower_Ivy.wikitext
@@ -1,1 +1,4 @@
-The term "lower ivies" refers to [[Columbia]], [[Dartmouth]], [[Brown]], [[Cornell]], and the [[University of Pennsylvania]]. It describes a group of ivy league universities that are generally seen as less prestigious than [[Harvard]], [[Yale]], [[Stanford]], and [[Princeton]].
+==English==
+===Noun===
+'''[[lower]] [[ivy]]'''
+#(''US'') any of the [[ivy league]] [[universities]], such as [[Columbia]], [[Dartmouth]], [[Brown]], [[Cornell]], and the [[University of Pennsylvania]] that are generally seen as less [[prestigious]] than [[Harvard]], [[Yale]], [[Stanford]], and [[Princeton]]
