--- a/wiki/come_a_cropper.wikitext
+++ b/wiki/come_a_cropper.wikitext
@@ -1,5 +1,8 @@
 ==English==
 ===Phrasal verb===
 '''come a cropper''', '''came a cropper'''
+#(''dated'') to [[fall]] [[headlong]] from a [[horse]]
 #{{idiom}} (UK) to [[suffer]] some [[misfortune]]; to [[fail]]
 #:''My efforts to correct matters '''came a cropper''' and everything fell apart.''
+===See also===
+*[[neck and crop]]
