--- a/wiki/appel.wikitext
+++ b/wiki/appel.wikitext
@@ -12,6 +12,18 @@
 '''appel''' ''m''
 
 #an [[apple]].
+----
+
+==French==
+===Noun===
+'''appel''' ''m''
+
+# [[call]]
+# [[appeal]]
+
+===Related terms===
+*[[appelant]]
+*[[appeler]]
 
 [[de:appel]]
 [[et:Appel]]
