--- a/wiki/argento.wikitext
+++ b/wiki/argento.wikitext
@@ -1,6 +1,8 @@
 ==Italian==
 ===Etymology===
 Latin ''[[argentum]]''
+===Pronunciation===
+argènto, /arˈdʒɛnto/, /<tt>ar"dZEnto</tt>/
 ===Noun===
 '''argento''' ''m''
 
@@ -14,6 +16,6 @@ Latin ''[[argentum]]''
 *[[argentifero]]
 *[[argentino]]
 *[[argentone]]
-
+[[category:Italian elements]]
 [[ja:argento]]
 [[pl:Argento]]
