/* Adjectival phrase */ <over the top#99951>

--- a/wiki/over_the_top.wikitext
+++ b/wiki/over_the_top.wikitext
@@ -3,6 +3,8 @@
 '''[[over]] the [[top]]'''
 #[[excessive]]; [[exaggerated]]; [[outrageous]]
 #:''He has always had an independent style, but don't you think purple spiky hair is a bit '''over the top'''?''
+#(''from World War One'') over the [[parapet]] of a [[trench]], especially at the start of a [[futile]] [[attack]]
+#:''The men were sent '''over the top''' to their certain death.''
 
 ===Alternative forms===
 '''over-the-top'''
