--- a/wiki/oro.wikitext
+++ b/wiki/oro.wikitext
@@ -1,7 +1,22 @@
+==Italian==
+===Etymology===
+Latin ''[[aurum]]''
+===Pronunciation===
+òro, /ˈɔro/, /<tt>"Oro</tt>/
+===Noun===
+'''oro''' ''m''
+
+# [[gold]]
+
+===Related terms===
+*[[orpello]]
+*[[pomodoro]]
+[[category:Italian elements]]
+----
 ==Spanish==
 ===Noun===
 #[[gold]]
-
+----
 ==Ido==
 ===Noun===
 # [[gold]].
