--- a/wiki/ardent_spirits.wikitext
+++ b/wiki/ardent_spirits.wikitext
@@ -5,4 +5,4 @@ First attested [[w:1471|1471]], from its [[inflammability]]; see etymology secti
 ===Noun===
 '''[[ardent]] [[spirits]]'''
 #A strong [[distilled]] [[alcoholic]] [[liquor]] or [[whiskey]]
-#: ''" Strong alcoholic liquors, such as whiskey or gin"''
+#: ''"Even then I realized the possibilities of my [[suburb]], that hotbed of revolution in which [[hero]]es, [[inventor]]s, and practical men of [[science]], [[rogue]]s and [[scoundrel]]s, [[virtue]]s and [[vice]]s, were all packed together by [[poverty]], [[stifle]]d by [[necessity]], [[drown]]ed in drink, and [[consume]]d by [[ardent spirits]]."''
