--- a/wiki/ardent_spirits.wikitext
+++ b/wiki/ardent_spirits.wikitext
@@ -2,7 +2,20 @@
 ===Etymology===
 First attested [[w:1471|1471]], from its [[inflammability]]; see etymology section of [[ardent]].
 
+===Pronunciation===
+*{{AHD|ärdnt}}
+
 ===Noun===
 '''[[ardent]] [[spirits]]'''
 #A strong [[distilled]] [[alcoholic]] [[liquor]] or [[whiskey]]
 #: ''"Even then I realized the possibilities of my [[suburb]], that hotbed of revolution in which [[hero]]es, [[inventor]]s, and practical men of [[science]], [[rogue]]s and [[scoundrel]]s, [[virtue]]s and [[vice]]s, were all packed together by [[poverty]], [[stifle]]d by [[necessity]], [[drown]]ed in drink, and [[consume]]d by [[ardent spirits]]."''
+====Synonyms====
+*[[aqua vitae]]
+====Related terms====
+*[[booze]]
+*[[hard drink]]
+*[[hard liquor]]
+*[[John Barleycorn]]
+*[[liquor]]
+*[[spirits]]
+*[[strong drink]]
