--- a/wiki/ardent.wikitext
+++ b/wiki/ardent.wikitext
@@ -1,13 +1,15 @@
 ==English==
 ===Etymology===
-Latin "burning"
+First attested circa [[w:14th century|14th century]], {{ME.}} [[ardaunt]], from {{OF.}} [[ardant]], from {{L.}} [[ardentem]], nominative of [[ardens]], [[present participle]] of [[ardere]], "to [[burn]]."
+
 ===Adjective===
 '''ardent'''
-# [[burn]]ing
 # full of [[ardour]]; [[fervent]], [[passionate]]
+# [[burn]]ing; [[glowing]]; [[shining]]
 
 ===Related terms===
 *[[ardently]]
+*[[ardent spirits]]
 
 [[et:Ardent]]
 [[it:ardent]]
