--- a/wiki/niacin.wikitext
+++ b/wiki/niacin.wikitext
@@ -1,7 +1,7 @@
 ==English==
-
 ===Noun===
-
 '''niacin'''
-
-#A component of the B vitamin complex.
+#A [[water]]-[[soluble]] [[vitamin]], a component of [[vitamin B complex]],found in [[meat]], [[yeast]] and [[dairy]] [[product]]s; it is [[essential]] to [[metabolism]]
+===Synonyms===
+*[[nicotinic acid]]
+*[[nicotinamide]]
