not a redirect <nicotinic acid#100117>

--- a/wiki/nicotinic_acid.wikitext
+++ b/wiki/nicotinic_acid.wikitext
@@ -1,1 +1,6 @@
-#REDIRECT [[niacin]]
+==English==
+===Noun===
+'''nicotinic acid'''
+#{{chemistry}} [[pyridine]]-3-[[carboxylic acid]]; together with [[nicotinamide]] is a part of the [[vitamin B complex]]
+===Synonyms===
+*[[niacin]]
