/* Transitive Verb */ <retrace#100118>

--- a/wiki/retrace.wikitext
+++ b/wiki/retrace.wikitext
@@ -2,3 +2,4 @@
 ===Transitive Verb===
 '''retrace'''
 #[[trace]] [[again]]; to go [[back]] [[over]] something, usually in an attempt of [[rediscovery]]
+#:''He '''retraced''' his steps, and found his keys where he had dropped them.''
