/* Types of acids */ <acid#1625>

--- a/wiki/acid.wikitext
+++ b/wiki/acid.wikitext
@@ -91,6 +91,7 @@ In certain cases, [[sulphur]], [[selenium]], or [[tellurium]] may take the place
 *[[deoxyribonucleic acid]], [[DNA]]
 *[[erucic acid]]
 *[[fatty acid]]
+*[[folic acid]]
 *[[formic acid]]
 *[[fulminic acid]]
 *[[fumaric acid]]
