--- a/wiki/%D0%BE%D0%B1%D0%BE%D1%80%D0%BE%D1%82%D0%B5%D0%BD%D1%8C.wikitext
+++ b/wiki/%D0%BE%D0%B1%D0%BE%D1%80%D0%BE%D1%82%D0%B5%D0%BD%D1%8C.wikitext
@@ -1,4 +1,7 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''оборотень'''
-#[[werewolf]]; [[turnskin]] (seldom)
+'''оборотень''' (óboroten’) ''m''
+
+# [[werewolf]]
+# [[turnskin]] ''(rare)''
