/* Possessive pronoun */ <мой#52517>

--- a/wiki/%D0%BC%D0%BE%D0%B9.wikitext
+++ b/wiki/%D0%BC%D0%BE%D0%B9.wikitext
@@ -1,6 +1,61 @@
 ==Russian==
 [[Category:Russian pronouns]]
 ===Possessive pronoun===
-'''моя''' (mojá)
+'''мой''', моя, моё, мои (moj, mojá, mojó, moí) ''m/f/n/pl''
 
-# (''feminine form of [[мой]]'') [[my]]
+# [[my]], [[mine]]
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[masculine|masc. sg.]]
+! style="background-color: #EFEFFF" align="center"|[[feminine|fem. sg.]]
+! style="background-color: #EFEFFF" align="center"|[[neuter|neut. sg.]]
+! style="background-color: #EFEFFF" align="center"|[[plural]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{Unicode|мой}}
+| align="center"|{{Unicode|моя́}}
+| align="center"|{{Unicode|моё}}
+| align="center"|{{Unicode|мои́}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{Unicode|моего́}}
+| align="center"|{{Unicode|мое́й}}
+| align="center"|{{Unicode|моего́}}
+| align="center"|{{Unicode|мои́х}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{Unicode|моему́}}
+| align="center"|{{Unicode|мое́й}}
+| align="center"|{{Unicode|моему́}}
+| align="center"|{{Unicode|мои́м}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{Unicode|мой, моего́}}
+| align="center"|{{Unicode|мою́}}
+| align="center"|{{Unicode|моё}}
+| align="center"|{{Unicode|мои́, мои́х}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{Unicode|мои́м}}
+| align="center"|{{Unicode|мое́ю, мое́й}}
+| align="center"|{{Unicode|мои́м}}
+| align="center"|{{Unicode|мои́ми}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{Unicode|о моём}}
+| align="center"|{{Unicode|о мое́й}}
+| align="center"|{{Unicode|о моём}}
+| align="center"|{{Unicode|о мои́х}}
+|}
+
+===See also===
+*[[свой]]
+*[[твой]]
+*[[его]]
+*[[её]]
+*[[наш]]
+*[[ваш]]
+*[[их]]
+*[[я]]
