/* Possessive pronoun */ <твой#100128>

--- a/wiki/%D1%82%D0%B2%D0%BE%D0%B9.wikitext
+++ b/wiki/%D1%82%D0%B2%D0%BE%D0%B9.wikitext
@@ -1,3 +1,5 @@
+==Russian==
+[[Category:Russian pronouns]]
 ===Possessive pronoun===
 '''твой''', твоя, твоё, твои (tvoj, tvojá, tvojó, tvoí) ''m/f/n/pl''
 
