--- a/wiki/amnesia.wikitext
+++ b/wiki/amnesia.wikitext
@@ -8,7 +8,8 @@ Greek ''[[ἀμνησία]]'' 'forgetfulness'.
 
 #Forgetfulness; also, a defect of speech, from cerebral disease, in which the patient substitutes wrong words or names in the place of those he wishes to employ.
 
-===Related terms===
+====Derived terms====
+*[[amnesiac]]
 *[[anterograde amnesia]]
 *[[retrograde amnesia]]
 
