--- a/wiki/famosae.wikitext
+++ b/wiki/famosae.wikitext
@@ -1,1 +1,1 @@
-'''Famosae''', connotes “soiled doves from respectable families”. In ancient [[Roman civilization]], Famosae referred to unmarried girls and married women of higher status who indulged in sex  for the fun of  it.
+'''Famosae''', connotes “soiled doves from respectable families”. In [[Ancient Rome| ancient Roman civilization]], Famosae referred to unmarried [[girl]]s and [[married]] [[woman|women]] of higher status who indulged in sex  for the fun of  it.
