--- a/wiki/plumb.wikitext
+++ b/wiki/plumb.wikitext
@@ -4,6 +4,6 @@
 
 '''plumb'''
 
-#A little mass or weight of lead, or the like, attached to a line, and used by builders, etc., to indicate a vertical direction; a plummet; a plumb bob.
+#A little mass or weight of [[lead]], or the like, attached to a line, and used by builders, etc., to indicate a vertical direction; a plummet; a plumb bob.
 
 [[pl:Plumb]]
