--- a/wiki/in_utero.wikitext
+++ b/wiki/in_utero.wikitext
@@ -1,8 +1,7 @@
-==Latin==
-
-===Pronunciation===
-[[wiktionary:Pronunciation_key|IPN]]:&nbsp;&nbsp;/ in 'jutɜro. /
-
-===Latin Phrase===
+==English==
+{{wikipedia}}
+===Etymology===
+Latin '''[[in]] [[uterus|utero]]''', ''"in the uterus"''.
+===Adverb===
 '''in utero'''
-: Occurring or residing within the [[uterus]] or womb; [[unborn]].
+#Occurring or residing within the [[uterus]] or [[womb]]; [[unborn]].
