{{roman-stub}} <famosae#759267>

--- a/wiki/famosae.wikitext
+++ b/wiki/famosae.wikitext
@@ -1,1 +1,7 @@
 '''Famosae''', connotes “soiled doves from respectable families”. In [[Ancient Rome| ancient Roman civilization]], Famosae referred to unmarried [[girl]]s and [[married]] [[woman|women]] of higher status who indulged in sex  for the fun of  it.
+
+see also:
+
+*[[Ancient Rome]]
+
+{{roman-stub}}
