added hi <hi#4804>

--- a/wiki/hi.wikitext
+++ b/wiki/hi.wikitext
@@ -29,7 +29,7 @@
 *Finnish: [[hei]], [[moi]], [[terve]]
 *French: [[salut]], [[bonjour]]
 *[[Galician]]: [[hola]]
-*German: [[Hallo]]
+*German: [[Hallo]], [[Hi]]
 *Greek: [[γειά]]
 *Hebrew: [[שלום]]
 *Hungarian: [[szia]]
