--- a/wiki/%E5%BE%A2.wikitext
+++ b/wiki/%E5%BE%A2.wikitext
@@ -14,7 +14,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しょう]] (shō)
@@ -52,3 +52,5 @@
 * '''Unicode''':
 ** Hex: 5FA2
 ** Decimal: 24482
+
+[[Category:CJKV Character articles lacking a common meaning|彳+08]]
