--- a/wiki/wordmark.wikitext
+++ b/wiki/wordmark.wikitext
@@ -1,3 +1,6 @@
-{{disambig}}
+'''Wordmark''' may mean:
+
 *In computing, a '''Wordmark''' is a bit in each memory location on variable word length computers (e.g., [[IBM 1401]], [[IBM 1620]]) used to mark the end of a word.
-*'''Wordmark''' is a synonym of [[Logotype]], often shortened to the more familiar [[Logotype|Logo]].
+*a synonym of [[Logotype]], often shortened to the more familiar ''logo''.
+
+{{disambig}}
