robot  Adding:fr <epsilon#28092>

--- a/wiki/epsilon.wikitext
+++ b/wiki/epsilon.wikitext
@@ -23,5 +23,6 @@ Fr. [[Greek|Gk.]] ''epsilon'', the letter Ε.
 *[[Portuguese]]: [[épsilon]] ''m'' (1,2)
 *Swedish: epsilon
 
+[[fr:epsilon]]
 [[pl:Epsilon]]
 [[fi:Epsilon]]
