--- a/wiki/equivalent.wikitext
+++ b/wiki/equivalent.wikitext
@@ -2,3 +2,4 @@
 #That which is [[exactly]] something else, that which is not [[different]] from something else
 
 [[it:equivalent]]
+[[nl:equivalent]]
