/* Possessive pronoun */ <её#47454>

--- a/wiki/%D0%B5%D1%91.wikitext
+++ b/wiki/%D0%B5%D1%91.wikitext
@@ -6,8 +6,20 @@
 #[[her]], [[hers]], [[its]]
 #:[[Где]] её [[книга]]? (gde jejó kníga) — ''Where is her book?''
 
+===See also===
+*[[свой]]
+*[[мой]]
+*[[твой]]
+*[[его]]
+*[[наш]]
+*[[ваш]]
+*[[их]]
+
 ===Personal pronoun===
 '''её''' (jejó)
 
 #[[her]], [[it]] (the [[genitive case]] and [[accusative case]] of '''[[она]]''')
 #:[[Он]] [[она|её]] [[видеть|видет]] (on jejó vídet) — ''He sees her.''
+
+===See also===
+*[[она]]
