robot  Adding:pl,it <erosion#96434>

--- a/wiki/erosion.wikitext
+++ b/wiki/erosion.wikitext
@@ -3,3 +3,6 @@
 [[Category:English nouns]]
 '''erosion'''
 #the [[result]] of having been being [[worn]] away or [[eroded]], as by a [[glacier]] on [[rock]] or the [[sea]] on a [[cliff]] [[face]]
+
+[[it:erosion]]
+[[pl:Erosion]]
