robot  Adding:pl <septicemia#91556>

--- a/wiki/septicemia.wikitext
+++ b/wiki/septicemia.wikitext
@@ -6,3 +6,5 @@
 [[Category:English nouns]]
 '''septicemia'''
 # [[invasion]] of the [[blood]] by [[microorganism]]s, [[esp.]] [[bacteria]]
+
+[[pl:Septicemia]]
