+en eponym cat <mansard#100134>

--- a/wiki/mansard.wikitext
+++ b/wiki/mansard.wikitext
@@ -1,10 +1,17 @@
 ==English==
 ===Etymology===
 from [[w:Francois Mansart|Francois Mansart]], French architect
+
 ===Adjective===
 {{wikipedia}}
 '''mansard'''
+
 #(''of a roof'') having two [[slope]]s on each [[side]], the [[lower]] being [[steeper]] than the [[upper]]
+
 ===Noun===
+'''mansard'''
+
 # a [[mansard roof]]
 # the upper [[storey]] of a [[building]], surrounded by such a roof
+
+[[Category:English eponyms]]
