--- a/wiki/%E4%BA%B9.wikitext
+++ b/wiki/%E4%BA%B9.wikitext
@@ -11,14 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#progress
-*# busy, untiring
-*# exert
-
+*#[[progress]]
+*# [[busy]], [[untiring]]
+*# [[exert]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]:
@@ -34,7 +33,7 @@
 
 ----
 
-== [[Japanese]] [[kanji]] ==
+== Japanese [[kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[び]] (bi), [[み]] (mi), [[ぼん]] (bon), [[もん]] (mon)
@@ -44,9 +43,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''Pronunciation''': 미, 문
+* '''Pronunciation''': [[미]], [[문]]
 
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': mi, mun
