/* Derived terms */ <nitrite#100141>

--- a/wiki/nitrite.wikitext
+++ b/wiki/nitrite.wikitext
@@ -4,7 +4,7 @@
 #{{chemistry}} any [[salt]] or [[ester]] of [[nitrous acid]]
 #{{chemistry}} the [[univalent]] [[radical]] -NO<sub>2</sub>, and the [[anion]] NO<sub>2</sub><sup>-</sup>
 ===Derived terms===
-*[[alkyl nitrites]]
+*[[alkyl nitrite]]
 *Wikipedia has articles on the following specific nitrites
 **[[w:amyl nitrite|amyl nitrite]]
 **[[w:butyl nitrite|butyl nitrite]]
