robot  Adding:fi <escape#40627>

--- a/wiki/escape.wikitext
+++ b/wiki/escape.wikitext
@@ -36,3 +36,4 @@ Managing to leave from an unpleasant or dangerous place or situation, e.g. a pri
 *[[make an escape]]
 
 [[it:escape]]
+[[fi:Escape]]
