/* Noun */ <alkyl nitrite#100143>

--- a/wiki/alkyl_nitrite.wikitext
+++ b/wiki/alkyl_nitrite.wikitext
@@ -2,7 +2,8 @@
 ===Noun===
 {{wikipediapar|alkyl nitrites}}
 '''[[alkyl]] [[nitrite]]'''
-# any of a [[class]] of [[inhalent]] [[recreational drug]]s, originally developed for the [[treatment]] of [[angina]]
+# any of a [[class]] of [[inhalant]] [[recreational drug]]s, originally developed for the [[treatment]] of [[angina]]
+
 ===Related terms===
 *Wikipedia has articles on the following specific nitrites
 **[[w:amyl nitrite|amyl nitrite]]
