add cat <debye#99840>

--- a/wiki/debye.wikitext
+++ b/wiki/debye.wikitext
@@ -9,3 +9,4 @@ from [[w:Peter Debye|Peter Debye]], US physicist
 {{wikipediapar|Peter Debye}}
 '''Debye'''
 #{{physics}} '''Peter Joseph Wilhelm Debye''', 1884-1966, [[Dutch]]-[[American]] [[physicist]]
+[[category:English eponyms]]
