robot  Adding:de <essere#13839>

--- a/wiki/essere.wikitext
+++ b/wiki/essere.wikitext
@@ -235,7 +235,8 @@ Latin ''[[esse]]''
 *[[essenza]]
 *[[essere umano]]
 
+[[de:essere]]
 [[et:Essere]]
 [[it:essere]]
-[[ja:essere]]
 [[la:Essere]]
+[[ja:essere]]
