robot  Adding:et <espèce#93343>

--- a/wiki/esp%C3%A8ce.wikitext
+++ b/wiki/esp%C3%A8ce.wikitext
@@ -10,3 +10,5 @@
 #(''in plural'') [[cash]], [[specie]], [[coin]]
 #('''espèce de''') [[you]] (''used before epithets directed at a single person'')
 #:''Espèce d'idiot!'' - You idiot!
+
+[[et:Espèce]]
