--- a/wiki/Neoplatonism.wikitext
+++ b/wiki/Neoplatonism.wikitext
@@ -3,3 +3,4 @@
 {{wikipedia}}
 '''Neoplatonism'''
 # a [[school]] of [[philosophy]] based on the [[teaching]]s of [[Plato]] and, subsequently, [[Plotinus]]; it was the [[foundation]] for [[paganism]]
+[[category:English eponyms]]
