--- a/wiki/Laplace_transform.wikitext
+++ b/wiki/Laplace_transform.wikitext
@@ -5,3 +5,4 @@
 #{{mathematics}} a [[function]] on [[positive]] [[real number]]s such that [[differentiation]] and [[integration]] are reduced to [[multiplication]] and [[division]]
 ====Translations====
 *Swedish: [[Laplacetransform]] ''c''
+[[category:English eponyms]]
