robot  Adding:fi <settlement#86659>

--- a/wiki/settlement.wikitext
+++ b/wiki/settlement.wikitext
@@ -7,3 +7,5 @@
 # A colony newly established; a place or region newly settled.
 # ''(Architecture):'' The gradual sinking of a building.   Fractures or dislocations caused by settlement.
 # ''(Law):'' A settled place of abode; [[residence]]; a [[right]] growing out of legal residence.
+
+[[fi:Settlement]]
