robot  Adding:it <estrange#97147>

--- a/wiki/estrange.wikitext
+++ b/wiki/estrange.wikitext
@@ -20,3 +20,5 @@ Old French; '''[[estranger]]'''&mdash;''MISSING DEFINITION'', via Latin; '''[[es
 [[Category:French derivations]]
 [[Category:Latin derivations]]
 [[Category:English verbs]]
+
+[[it:estrange]]
