/* Personal pronoun */ <его#100145>

--- a/wiki/%D0%B5%D0%B3%D0%BE.wikitext
+++ b/wiki/%D0%B5%D0%B3%D0%BE.wikitext
@@ -19,7 +19,7 @@
 ===Personal pronoun===
 '''[[он|его]]''' (jevó)
 
-#[[him]], [[it]] (the [[genitive case]] and [[accusative case]] of '''[[он]]''', and the [[genitive case]] of '''[[оно]]''')
+#[[him]], [[it]] (the [[genitive case]] and [[accusative case]] of '''[[он]]''' and '''[[оно]]''')
 #:[[Она]] [[он|его]] [[видеть|видет]] (oná jevó vídet) — ''She sees him.''
 
 ===See also===
