robot  Adding:fi <sex#30934>

--- a/wiki/sex.wikitext
+++ b/wiki/sex.wikitext
@@ -225,6 +225,8 @@ translations with definitions is unreliable.
 *[[sjättedel]]
 [[Category:Swedish cardinal numbers]]
 
+[[Category:1000 English basic words]]
+
 [[de:Sex]]
 [[gl:Sex]]
 [[it:sex]]
@@ -232,5 +234,5 @@ translations with definitions is unreliable.
 [[hu:sex]]
 [[nl:sex]]
 [[pt:Sex]]
+[[fi:Sex]]
 [[sv:sex]]
-[[Category:1000 English basic words]]
