/* See also */ <Ugricist#100142>

--- a/wiki/Ugricist.wikitext
+++ b/wiki/Ugricist.wikitext
@@ -8,13 +8,14 @@
 ===See also===
 *[[Altaicist]]
 *[[Americanist]]
-*[[Baltologist]]
+*[[Balticist]], [[baltologist]]
 *[[Esperantist]]
 *[[Finno-Ugricist]]
 *[[Germanicist]]
 *[[Indo-Europeanist]]
 *[[Klingonist]]
 *[[Lojbanist]]
-*[[Tocharologist]]
+*[[Slavicist]]
+*[[Tocharianist]], [[tocharologist]]
 *[[Turkologist]]
 *[[Uralicist]]
