--- a/wiki/dwarf.wikitext
+++ b/wiki/dwarf.wikitext
@@ -21,6 +21,7 @@
 
 ====Translations====
 *Chinese: [[矮人]]
+*Danish: [[dværg]] ''c''
 *Czech: [[trpaslík]]  ''m'', [[skřítek]]  ''m'', [[pidimužík]]  ''m''
 *Dutch: [[dwerg]] ''m''
 *French: [[nain]] ''m''
@@ -52,6 +53,9 @@
 #to make (to appear) much smaller; to [[render]] [[puny]] or [[tiny]]
 #:''The newly-built skyscraper '''dwarfs''' the older buildings that make up the rest of downtown.''
 #:''Bach '''dwarfs''' all other composers.''
+
+====Translations====
+*Danish: rage op over; [[undertrykke]]
 
 ===Related terms===
 *[[dwarf star]]
