--- a/wiki/midget.wikitext
+++ b/wiki/midget.wikitext
@@ -5,19 +5,25 @@
 
 ===Noun===
 '''midget'''  (''plural:'' '''[[midgets]]''')
+
 # A normally proportioned person with small stature, usually defined as reaching an adult height less than 4'10".  This term is considered offensive by many.
 # A small version of something.
-#:''The midget pony.''
+#:''The '''midget''' pony.''
 # Small swarming insects similar to mosquitoes. This is an incorrect variation on [[midge]]s but is commonly used.
 
 ====Translations====
+*Danish: [[dværg]] ''c''
 *Spanish: [[enano]] ''m''
 
 ===Adjective===
 '''midget'''
-# Miniature.
 
-===Antonym===
+# [[Miniature]].
+
+====Translations====
+*Danish: [[dværg-]]; [[mini-]]
+
+===Antonyms===
 *[[giant]]
 
 ===See also===
