/* Translations */ +danish <elf#26269>

--- a/wiki/elf.wikitext
+++ b/wiki/elf.wikitext
@@ -11,6 +11,7 @@
 
 =====Translations=====
 *Chinese: [[精靈]]
+*Danish: [[alf]]
 *Dutch: [[elf#Dutch|elf]] (1)
 *Finnish: [[haltija]] (1, ''eg. of forest''), [[tonttu]] (1, ''belonging to a place, also with Father Christmas''), [[keiju]] (1, ''faery''), [[haltia]] (1, ''Tolkien etc., roleplaying'')
 *German: [[Elf]] ''m'' (1), [[Elb]] ''m''
