robot  Adding:fi <shame#54015>

--- a/wiki/shame.wikitext
+++ b/wiki/shame.wikitext
@@ -46,3 +46,5 @@ While shame has a strong social element and can carry fear of being shut out of 
 *[[shameful]]
 *[[shameless]]
 [[Category:1000 English basic words]]
+
+[[fi:Shame]]
