/* Translations */ da gender; dewikify self-refs <elf#26269>

--- a/wiki/elf.wikitext
+++ b/wiki/elf.wikitext
@@ -11,10 +11,10 @@
 
 =====Translations=====
 *Chinese: [[精靈]]
-*Danish: [[alf]]
+*Danish: [[alf]] ''c''
 *Dutch: [[elf#Dutch|elf]] (1)
 *Finnish: [[haltija]] (1, ''eg. of forest''), [[tonttu]] (1, ''belonging to a place, also with Father Christmas''), [[keiju]] (1, ''faery''), [[haltia]] (1, ''Tolkien etc., roleplaying'')
-*German: [[Elf]] ''m'' (1), [[Elb]] ''m''
+*German: Elf ''m'' (1), [[Elb]] ''m''
 *Hebrew: [[שד גמד|שֵׁד גַמָּד]]
 *Italian: [[elfo]]
 *Lithuanian: [[elfas]] ''m''; [[elfė]] ''f''
