/* Possessive pronoun */ <её#47454>

--- a/wiki/%D0%B5%D1%91.wikitext
+++ b/wiki/%D0%B5%D1%91.wikitext
@@ -1,7 +1,7 @@
 =={{ru}}==
 [[Category:Russian pronouns]]
 ===Possessive pronoun===
-'''её''' (jejó)
+'''её''' (jejó) ''(invariable)''
 
 #[[her]], [[hers]], [[its]]
 #:[[Где]] её [[книга]]? (gde jejó kníga) — ''Where is her book?''
