+danish entry <fe#30067>

--- a/wiki/fe.wikitext
+++ b/wiki/fe.wikitext
@@ -8,7 +8,18 @@
 from Latin ''[[ferrum]]''
 ----
 
-==Latenkwa==
+==Danish==
+===Noun===
+'''fe''' ''c''
+
+# [[fairy]]
+
+===See also===
+*[[alf]] ''c''
+
+----
+
+==[[Latenkwa]]==
 ===Noun===
 '''fe'''
 
