robot  Adding:sv <euthanasia#67773>

--- a/wiki/euthanasia.wikitext
+++ b/wiki/euthanasia.wikitext
@@ -13,4 +13,5 @@ First attested in [[w:1606|1606]], from Greek [[euthanasia]], from [[eu-]] ''goo
 
 [[it:euthanasia]]
 [[pl:Euthanasia]]
+[[sv:euthanasia]]
 [[zh:Euthanasia]]
