robot  Adding:fi,la <Europa#58979>

--- a/wiki/Europa.wikitext
+++ b/wiki/Europa.wikitext
@@ -74,8 +74,10 @@
 [[de:Europa]]
 [[eo:Europa]]
 [[hr:Europa]]
+[[la:Europa]]
 [[hu:Europa]]
 [[nl:Europa]]
 [[ja:Europa]]
 [[pl:Europa]]
+[[fi:Europa]]
 [[sv:Europa]]
