--- a/wiki/fairy.wikitext
+++ b/wiki/fairy.wikitext
@@ -14,9 +14,9 @@
 
 ====Translations====
 *Catalan: [[fada]] ''f'' (1)
-*Chinese Characters: [[佺]]
+*CJKV Characters: [[佺]]
 *Chinese: [[神仙]] (shén xiān)
-*[[Czech]]: 1. pohádková bytost (víla, vodník...) 2. teplouš (homosexual)
+*Czech: (1) [[pohádková bytost]] (víla, vodník...) (2) [[teplouš]] (homosexual)
 *Danish: [[fe]] ''c''; [[alf]] ''c''
 *Dutch: [[fee]] ''f''
 *{{fi}}: [[haltija]] (1), [[haltijatar]] (1, female), [[keiju]] (1), [[keijukainen]] (1), [[homoseksuaali]] (2), [[neiti]] (2, colloquial)
