robot  Adding:fi <she#5748>

--- a/wiki/she.wikitext
+++ b/wiki/she.wikitext
@@ -77,8 +77,10 @@ The third person singular, feminine, nominative case. (''Accusative and possessi
 
 [[Category:English third person pronouns]]
 
+[[Category:100 English basic words]]
+
 [[ja:she]]
 [[pl:She]]
 [[ro:She]]
+[[fi:She]]
 [[sv:she]]
-[[Category:100 English basic words]]
