robot  Adding:fi <event#36961>

--- a/wiki/event.wikitext
+++ b/wiki/event.wikitext
@@ -14,5 +14,7 @@
 *Slovak: [[udalosť]] ''f''
 *Spanish: [[evento]] ''n''
 
-[[it:event]]
 [[Category:1000 English basic words]]
+
+[[it:event]]
+[[fi:Event]]
