robot  Adding:it <evade#96215>

--- a/wiki/evade.wikitext
+++ b/wiki/evade.wikitext
@@ -25,3 +25,5 @@ From Latin ''[[evadere]]'', ''[[evasum]]'', ''[[e]]'' [[out]] + ''[[vadere]]'' t
 
 ===See also===
 *[[prevaricate]]
+
+[[it:evade]]
