+danish article <fast#19491>

--- a/wiki/fast.wikitext
+++ b/wiki/fast.wikitext
@@ -132,10 +132,31 @@ Old English ''[[fæst]]'', "firm". Confer Dutch ''[[vast]]'', German ''[[fest]]'
 
 ----
 
+==Danish==
+===Adjective===
+'''fast'''
+
+# [[firm]]
+# [[solid]]
+# [[tight]]
+# [[fixed]]
+# [[permanent]]
+# [[regular]]
+
+====Derived terms====
+*[[fastansat]] ''adjective''
+*[[fasthed]] ''c''
+*[[fastlægge]] ''verb''
+*[[fastsætte]] ''verb''
+
+----
+
 ==German==
 ===Adverb===
 '''fast'''
+
 # [[almost]], [[nearly]]
+
 ====Synonyms====
 # [[beinahe]]
 
