+danish article <faster#53258>

--- a/wiki/faster.wikitext
+++ b/wiki/faster.wikitext
@@ -10,8 +10,16 @@
 #[[Comparative]] of '''[[fast]]'''.
 
 ----
+
+==Danish==
+===Noun===
+'''faster''' ''c''
+
+# (paternal) [[aunt]]
+
+----
 ==Swedish==
 ===Noun===
 '''faster'''
 
-#[[paternal aunt]]
+# (paternal) [[aunt]]
