robot  Adding:hu <every#42379>

--- a/wiki/every.wikitext
+++ b/wiki/every.wikitext
@@ -40,7 +40,9 @@
 *[[all]]
 *[[each]]
 
+[[Category:200 English basic words]]
+
 [[it:every]]
+[[hu:every]]
 [[pt:Every]]
 [[ru:Every]]
-[[Category:200 English basic words]]
