robot  Adding:fi <ship#34185>

--- a/wiki/ship.wikitext
+++ b/wiki/ship.wikitext
@@ -54,7 +54,9 @@ From Middle English, from Old English [[scip]].
 *[[boat]]<!-- is this every a synonym? -->
 *[[-ship]]
 
+[[Category:1000 English basic words]]
+
 [[it:ship]]
 [[nl:ship]]
 [[ru:Ship]]
-[[Category:1000 English basic words]]
+[[fi:Ship]]
