--- a/wiki/clove.wikitext
+++ b/wiki/clove.wikitext
@@ -1,7 +1,11 @@
 ==English==
 ===Noun===
 '''clove''' (''plural'' cloves)
+
 #A very pungent aromatic spice, the unexpanded flower bud of the clove tree (Eugenia aromatica syn. Caryophullus aromatica), a native of the Molucca Isles.
 #an old English measure of weight, containing 7 pounds; half a [[stone]].
 #:'''Quotations'''
 #:*'''1866''': By a statute of 9 Hen. VI. it was ordained that the wey of cheese should contain 32 cloves of 7 lbs. each, i.e. 224 lbs., or 2 cwts. &mdash; James Edwin Thorold Rogers, ''A History of Agriculture and Prices in England'', Volume 1, p. 169.
+
+====Translations====
+*Danish: [[fed]] ''n''
