/* Translations */ +da <great#38110>

--- a/wiki/great.wikitext
+++ b/wiki/great.wikitext
@@ -25,12 +25,12 @@
 *[[great white shark]]
 
 ====Translations====
+*Danish: [[fed]]
 *German: [1] [[groß]]; [2] [[schön]], [[fein]], [[wundervoll]]; [3] der [[Große]] e.g. "Alexander der Große"; [4] [[weit]], [[ausgedehnt]]; [5] [[bedeutend]]
 *[[Ido]]: [[granda]](1), [[brava]], [[tre bona]](2)
 *Indonesian: [[hebat]], [[agung]], [[besar]]
 
+[[Category:200 English basic words]]
 [[Category:Positive words]]
-
 [[it:great]]
 [[fi:Great]]
-[[Category:200 English basic words]]
