/* Translations */ +da; balance columns <smashing#77118>

--- a/wiki/smashing.wikitext
+++ b/wiki/smashing.wikitext
@@ -18,14 +18,12 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
 *French: qui + ''appropriate [[third-person]] translation of'' '''[[smash]]'''
-*Italian: che + ''appropriate [[third-person]] translation of'' '''[[smash]]'''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+*Italian: che + ''appropriate [[third-person]] translation of'' '''[[smash]]'''
 |}
 |}
 
@@ -34,13 +32,12 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
-*French: [[sensass]] ''m and f'', [[super#French|super]] ''m and f'', [[génial]] ''m'', géniale ''f''
+*Danish: [[fed]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+*French: [[sensass]] ''m and f'', [[super#French|super]] ''m and f'', [[génial]] ''m'', géniale ''f''
 |}
 |}
 
