+danish article <filter#46205>

--- a/wiki/filter.wikitext
+++ b/wiki/filter.wikitext
@@ -50,6 +50,14 @@ to filter out smth. - has the same meaning like to filter smth.
 *[[oil filter]]
 
 ----
+==Danish==
+===Noun===
+'''filter''' ''n''
+
+# a filter
+
+----
+
 ==Dutch==
 ===Noun===
 '''filter''' ''m''
@@ -57,6 +65,7 @@ to filter out smth. - has the same meaning like to filter smth.
 # a filter
 
 ----
+
 ==German==
 ===Noun===
 '''Filter''' ''m''
