robot  Adding:fi <shop#33546>

--- a/wiki/shop.wikitext
+++ b/wiki/shop.wikitext
@@ -43,3 +43,5 @@
 '''to shop''' ([[shops]], [[shopped]], [[shopping]])
 
 #To report the criminal activities or whereabouts of (a suspect) to the police.
+
+[[fi:Shop]]
