+danish article <fin#46398>

--- a/wiki/fin.wikitext
+++ b/wiki/fin.wikitext
@@ -21,6 +21,16 @@
 
 ----
 
+==Danish==
+===Adjective===
+'''fin'''
+
+# [[fine]]
+# [[choice]]
+# [[fashionable]]
+
+----
+
 ==Dutch==
 ===Noun===
 '''Fin''' ''m'' (Plural: [[Finnen]], feminine: [[Finse]], diminutive: [[Finnetje]])
@@ -31,6 +41,7 @@
 *English: [[Finn]]
 
 ----
+
 == French ==
 === Noun ===
 '''fin''' ''f''
