--- a/wiki/veneer.wikitext
+++ b/wiki/veneer.wikitext
@@ -1,8 +1,12 @@
 ==English==
 ===Etymology===
-German ''furnieren'', from Old French ''fournir'' 'furnish'.
+German ''[[furnieren]]'', from Old French ''[[fournir]]'' '[[furnish]]'.
 
 ===Noun===
 '''veneer'''
+
 #A thin decorative covering of fine wood applied to coarser wood or other material.
 #An attractive appearance that covers or disguises true nature or feelings.
+
+====Translations====
+*Danish: [[finér]] ''c''
