--- a/wiki/exclusively.wikitext
+++ b/wiki/exclusively.wikitext
@@ -3,3 +3,5 @@
 ===Adverb===
 '''exclusively'''
 # to the [[exclusion]] of [[anything]] or [[anyone]] [[else]]; [[solely]] or [[entirely]]
+
+[[it:exclusively]]
