/* Possessive pronoun */ <его#100145>

--- a/wiki/%D0%B5%D0%B3%D0%BE.wikitext
+++ b/wiki/%D0%B5%D0%B3%D0%BE.wikitext
@@ -5,7 +5,7 @@
 
 #[[his]], [[its]]
 #:[[Где]] его [[книга]]? (gde jevó kníga) — ''Where is his book?''
-#:[[Я]] [[не]] [[видеть|видел]] его [[книга|книгу]] (ja ne vídel jevó knígu) — ''I did not see his book.''
+#:[[Я]] [[уже]] [[видеть|видел]] его [[книга|книгу]] (ja užé vídel jevó knígu) — ''I already sawhis book.''
 
 ===See also===
 *[[свой]]
