--- a/wiki/show.wikitext
+++ b/wiki/show.wikitext
@@ -162,3 +162,5 @@ The translations below need to be checked by native speakers and inserted into t
 
 [[Category:Communication]]
 [[Category:200 English basic words]]
+
+[[fi:Show]]
