+en label; +en eponym cat <Platonic#23335>

--- a/wiki/Platonic.wikitext
+++ b/wiki/Platonic.wikitext
@@ -1,9 +1,10 @@
+==English==
 ===Adjective===
 '''Platonic'''<!-- always capitalised or not? -->
 
 #of or relating to the ancient Greek philosopher Plato or his philosophies
 #not sexual in nature
-#:''They are friends, but the relationship is strictly platonic.''
+#:''They are friends, but the relationship is strictly '''platonic'''.''
 
 ====Related terms====
 *[[Plato]]
@@ -15,3 +16,5 @@
 *[[Platonic love]]
 *[[Platonic relationship]]
 *[[platonic solid]]
+
+[[Category:English eponyms]]
