fix wikipedia link; +eponym cat <Platonic solid#43164>

--- a/wiki/Platonic_solid.wikitext
+++ b/wiki/Platonic_solid.wikitext
@@ -12,4 +12,6 @@
 
 ===See also===
 *[[Kepler solid]]
-*[[en:Platonic_solid|Wikipedia article on the Platonic solids]]
+*[[w:Platonic solid|Wikipedia article on the Platonic solids]]
+
+[[Category:English eponyms]]
