+en eponym cat <platonic love#53757>

--- a/wiki/platonic_love.wikitext
+++ b/wiki/platonic_love.wikitext
@@ -1,4 +1,7 @@
 ==English==
 ===Noun===
-'''Platonic love'''
+'''[[Platonic]] [[love]]'''
+
 #Intimate but non-sexual affection.
+
+[[Category:English eponyms]]
