--- a/wiki/Ugricist.wikitext
+++ b/wiki/Ugricist.wikitext
@@ -8,10 +8,12 @@
 ===See also===
 *[[Altaicist]]
 *[[Americanist]]
+*[[Arabist]]
 *[[Balticist]], [[baltologist]]
 *[[Esperantist]]
 *[[Finno-Ugricist]]
 *[[Germanicist]]
+*[[Hebraist]]
 *[[Indo-Europeanist]]
 *[[Klingonist]]
 *[[Lojbanist]]
