/* Translations */ indonesian <wish#58007>

--- a/wiki/wish.wikitext
+++ b/wiki/wish.wikitext
@@ -13,6 +13,7 @@
 
 ===Translations===
 *{{pt}}: [[desejo]]
+*{{id}}: [[harapan]], [[keinginan]]
 
 [[Category:English transitive verbs]]
 [[Category:Emotions]]
