robot  Adding:es <shut#7629>

--- a/wiki/shut.wikitext
+++ b/wiki/shut.wikitext
@@ -39,5 +39,7 @@
 *[[German]]: [[geschlossen]]
 *[[Irish]]: [[dúnta]]
 
-[[hu:Shut]]
 [[Category:1000 English basic words]]
+
+[[es:shut]]
+[[hu:Shut]]
