aussie eponym! <lamington#85658>

--- a/wiki/lamington.wikitext
+++ b/wiki/lamington.wikitext
@@ -1,6 +1,10 @@
 ==English==
 ===Noun===
 '''laminton''' (Plural '''lamingtons''')
+
 # An small Australian cake made with [[sponge]] cake covered with chocolate and [[desiccated]] [[coconut]].
-===Related Term===
-[[lamington drive]]
+
+====Related terms====
+*[[lamington drive]]
+
+[[Category:English eponyms]]
