robot  Adding:fi,es <sign#54428>

--- a/wiki/sign.wikitext
+++ b/wiki/sign.wikitext
@@ -79,6 +79,9 @@ From Latin '''[[signum]]''', ''sign''
 * [[sign up]]
 <!--* [[sign one's life away]] / [[enlist]]-->
 
+[[Category:1000 English basic words]]
+
+[[es:sign]]
 [[pl:Sign]]
 [[ru:Sign]]
-[[Category:1000 English basic words]]
+[[fi:Sign]]
