robot  Adding:fi <signature#76057>

--- a/wiki/signature.wikitext
+++ b/wiki/signature.wikitext
@@ -10,3 +10,5 @@
 #(''music'') [[Sign]]s on the [[stave]] indicating [[key]] and [[tempo]]
 #(''printing'') A group of four (or a [[multiple]] of four) [[page]]s [[print]]ed such that, when [[fold]]ed, become a [[section]] of a [[book]]
 #(''computing'') A [[pattern]] used for [[match]]ing the identity of a [[virus]], or of types of [[behaviour]].
+
+[[fi:Signature]]
