/* Noun */ <bower anchor#89670>

--- a/wiki/bower_anchor.wikitext
+++ b/wiki/bower_anchor.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Noun===
 '''[[bower]] [[anchor]]'''
-#{{nautical}} each of the two main anchors of a [[ship]], carried [[permanently]] [[attached]] to their [[cable]]s on each side of the [[bow]], always ready to be let go in an [[emergency]]
+#{{nautical}} each of the two main anchors of a [[ship]], carried [[permanently]] [[attached]] to their [[cable]]s on each side of the [[bow]], always ready to be let go in case of an [[emergency]].
 [[Category:English nouns]]
