robot  Adding:fr <singer#47658>

--- a/wiki/singer.wikitext
+++ b/wiki/singer.wikitext
@@ -18,3 +18,5 @@ Agent noun from verb ''[[sing]]'' + agent suffix ''[[-er]]''
 *[[sing]]
 *[[square dance singer]]
 *[[prima donna]]
+
+[[fr:singer]]
