--- a/wiki/density.wikitext
+++ b/wiki/density.wikitext
@@ -4,7 +4,7 @@
 #A measure of the amount of [[matter]] contained by a given [[volume]].
 
 ==== Translations ====
-*Chinese: [[mi4du4]]
+*Chinese: mìdù
 *Dutch: [[dichtheid]]
 *Finnish: [[tiheys]]
 *French: [[densité]] ''f''
