--- a/wiki/sinusoidal.wikitext
+++ b/wiki/sinusoidal.wikitext
@@ -3,3 +3,5 @@
 '''sinusoidal'''
 # in the form of a [[wave]], especially one whose [[amplitude]] varies in [[proportion]] to the [[sine]] of some [[variable]] (such as [[time]])
 [[category:English adjectives]]
+
+[[pl:Sinusoidal]]
