--- a/wiki/identity.wikitext
+++ b/wiki/identity.wikitext
@@ -11,7 +11,7 @@
 # {{algebra}} An element of an algebraic structure which, when applied to another element under an operation in that structure, yields this, second element.
 
 ====Translations====
-*Chinese: [[身份]] ([[shen1fen4]]), [[个性]] ([[ge4xing4]]), [[特性]] ([[te4xing4]])
+*Chinese: [[身份]] (shēnfèn), [[个性]] (gèxìng), [[特性]] (tèxìng)
 *Finnish: [[henkilöllisyys]] (1), [[identiteetti]] (2), [[yhtäläisyys]] (4)
 *French: [[identité]] ''f''
 *German: [[Identität]] ''f'' (1,2,3,4)
