/* Possessive pronoun */ <свой#100151>

--- a/wiki/%D1%81%D0%B2%D0%BE%D0%B9.wikitext
+++ b/wiki/%D1%81%D0%B2%D0%BE%D0%B9.wikitext
@@ -4,6 +4,12 @@
 '''свой''', своя, своё, свои (svoj, svojá, svojó, svoí) ''m/f/n/pl''
 
 # [[one's]], [[my]], [[his]], [[her]], [[its]], [[our]], [[your]], [[their]] ''(always refers to the subject of the sentence)''
+#:[[Я]] [[курить|курю]] свою [[сигара|сигару]] — ''I’m smoking my cigar.''
+#:[[Мы]] [[курить|курим]] свои [[сигара|сигары]] — ''We’re smoking our cigars.''
+#:[[Он]] [[курить|курит]] свою [[сигара|сигару]] — ''He’s smoking his cigar (his own).''
+#:[[Он]] [[курить|курит]] [[его]] [[сигара|сигару]] — ''He’s smoking his cigar (someone else’s).''
+#:[[Она]] [[говорить|говорит]] [[о]] своём [[сын|сыне]] — ''She’s talking about her son (her own son).''
+#:[[Она]] [[говорить|говорит]] [[о]] [[её]] [[сын|сыне]] — ''She’s talking about her son (another lady’s son).''
 # [[one's own]]
 # [[peculiar]]
 
