--- a/wiki/%D1%81%D0%B2%D0%BE%D0%B9.wikitext
+++ b/wiki/%D1%81%D0%B2%D0%BE%D0%B9.wikitext
@@ -7,7 +7,7 @@
 #:[[Я]] [[курить|курю]] свою [[сигара|сигару]] — ''I’m smoking my cigar.''
 #:[[Мы]] [[курить|курим]] свои [[сигара|сигары]] — ''We’re smoking our cigars.''
 #:[[Он]] [[курить|курит]] свою [[сигара|сигару]] — ''He’s smoking his cigar (his own).''
-#:[[Он]] [[курить|курит]] [[его]] [[сигара|сигару]] — ''He’s smoking his cigar (someone else’s).''
+#:[[Он]] [[курить|курит]] [[его]] [[сигара|сигару]] — ''He’s smoking his (the other guy’s) cigar.''
 #:[[Она]] [[говорить|говорит]] [[о]] своём [[сын|сыне]] — ''She’s talking about her son (her own son).''
 #:[[Она]] [[говорить|говорит]] [[о]] [[её]] [[сын|сыне]] — ''She’s talking about her son (another lady’s son).''
 # [[one's own]]
