--- a/wiki/father.wikitext
+++ b/wiki/father.wikitext
@@ -26,7 +26,7 @@ From Middle English ''[[fader]]'', from Old English ''[[fæder]]''; cognates inc
 *Bulgarian: [[баща]] ''f''
 *[[Catalan]]: [[pare]] ''m''
 *CJKV Characters: [[父]]; [[禰]], [[祢]] (''deceased'')
-*Chinese: [[父]], [[爸爸]] ([[bàba]])
+*Chinese: [[父]], [[爸爸]] ([[baba|bàba]])
 *Danish: [[far#Danish|far]] ''c'', [[fader]] ''c''
 *Czech: [[otec]], [[táta]], [[tatínek]], [[taťka]], [[fotr]] (''pejorative'')  ''m''
 *Dutch: [[vader]] ''m''
