robot  Adding:hu <skin#35463>

--- a/wiki/skin.wikitext
+++ b/wiki/skin.wikitext
@@ -171,5 +171,7 @@
 ===See also===
 *[[w:Skin|Wikipedia article on skin]]
 
-[[fr:skin]]
 [[Category:1000 English basic words]]
+
+[[fr:skin]]
+[[hu:skin]]
