==== Synonyms ====* [[bordello]],* [[knocking shop]] <brothel#79115>

--- a/wiki/brothel.wikitext
+++ b/wiki/brothel.wikitext
@@ -1,12 +1,18 @@
-= English =
+== English ==
 === Noun ===
 '''Brothel'''
-# A house of prostitution or the area immediately surrounding it.  
+# A house of prostitution (?? or the area immediately surrounding it ??)  
 
 ==== Synonyms ====
-* [[cat house]], [[whore house]]
+* [[bordello]]
+* [[cat house]] 
+* [[whore house]]
+* [[house of ill repute]]
+* [[knocking shop]]
+
+====Related Words & Phrases====
 * [[red light district]]
-* [[house of ill repute]].
+* [[prostitute]]- [[WikiSaurus:prostitute]]
 
 ==== Translations ====
 * {{de}}: [[Bordell]], [[Puff]] [1]
