+derived; danish article <brag#59182>

--- a/wiki/brag.wikitext
+++ b/wiki/brag.wikitext
@@ -1,3 +1,19 @@
 =={{en}}==
 ===Verb===
-# to boast
+'''to brag''' ([[brags]], [[bragged]], [[bragging]])
+
+# to [[boast]]
+
+====Derived terms====
+*[[braggart]]
+
+----
+
+==Danish==
+===Noun===
+'''brag''' ''n''
+
+# [[bang]], [[crash]]
+
+====Related terms====
+*[[brage]] ''verb''
