/* Translations */ +da <bang#34437>

--- a/wiki/bang.wikitext
+++ b/wiki/bang.wikitext
@@ -26,6 +26,7 @@
 ==== Translations ====
 *Basque: [[kolpe]], [[danbateko]], [[talka]]
 *Bulgarian: [[трясък]] ''m'' (1), [[взрив]] ''m'' (3), [[експлозия]] ''f'' (3), [[бретон]] ''m'' (4)
+*Danish: [[brag]] ''n''
 *Dutch: [[knal]] ''m'' (1,3), [[klap]] (1,2,3), [[slag]] (2), [[explosie]] (3), [[uitroepteken]] (5)
 *French: [[détonation]] ''f'' (3), [[frange]] ''f'' (4)
 *German: [[Knall]] ''m'' (1,3), [[Schlag]] ''m'' (2), [[Hieb]] ''m'' (2), [[Pony]] ''m'' (4)
