--- a/wiki/crash.wikitext
+++ b/wiki/crash.wikitext
@@ -6,6 +6,9 @@
 #([[onomatopoeic]]?) [[loud]] [[sound]]  as made for example by [[cymbal]]s
 #[[quick]], [[fast]] as in [[crash course]]
 
+====Translations====
+*Danish: [[brag]] ''n''
+
 ===Verb===
 '''to crash''' ('''crashes''', '''crashed''', '''crashing''')
 ====Intransitive====
