+danish article <brand#49305>

--- a/wiki/brand.wikitext
+++ b/wiki/brand.wikitext
@@ -4,7 +4,7 @@
 
 #A marker for cattle, a hot iron.
 #A make of a product.
-#:''Brands of breakfast cereal.''
+#:'''''Brands''' of breakfast cereal.''
 
 ====Translations====
 *Danish: [[varemærke]] (2)
@@ -30,6 +30,14 @@ See [[brand new]]
 *[[own brand]]
 *[[trademark]]
 *[[servicemark]]
+
+----
+
+==Danish==
+===Noun===
+'''brand''' ''c''
+
+# [[fire]]
 
 ----
 
