+danish article <bro#52578>

--- a/wiki/bro.wikitext
+++ b/wiki/bro.wikitext
@@ -1,10 +1,20 @@
 ==English==
-
 ===Noun===
-;bro
+'''bro'''
+
 #{{cattag|slang}}: [[brother]]; a male [[sibling]]
 #{{cattag|slang}}: [[brother]]; a male comrade or friend; one who shares one's ideals.
 #{{cattag|slang}}: [[brother]]; an African-American.
+
+----
+
+==Danish==
+===Noun===
+'''bro''' ''c''
+
+# [[bridge]]
+
+----
 
 ==Swedish==
 ===Noun===
