/* Synonyms */ *See [[WikiSaurus:vomit]] <sick#37186>

--- a/wiki/sick.wikitext
+++ b/wiki/sick.wikitext
@@ -119,6 +119,7 @@
 
 ====Synonyms====
 *[[puke]], [[spew]] (''all colloquial'')
+*See [[WikiSaurus:vomit]]
 
 ====Translations====
 *Finnish: [[oksennus]]
