--- a/wiki/shore.wikitext
+++ b/wiki/shore.wikitext
@@ -13,6 +13,9 @@
 # a [[prop]] or [[strut]] supporting the weight or flooring above it
 #:The '''shores''' stayed upright during the earthquake.
 
+====Translations====
+*Danish: [[bred]] ''c''
+
 ===Verb===
 '''to shore'''  ([[shored]], [[shoring]])
 
