--- a/wiki/slop.wikitext
+++ b/wiki/slop.wikitext
@@ -1,1 +1,14 @@
-'''Slop'''- A term used in the game of pool, or [[billiards]]. Where if you make a ball in a pocket by [[accident]] or not meaning to.
+==English==
+===Noun===
+'''slop'''  (plural ''slops'')
+#(uncountable) a [[liquid]] or semi-[[solid]]; [[goo]], [[paste]], or [[mud]]
+#[[scrap]]s which are fed to [[pig]]s
+#(''in plural'') {{nautical}} (''dated'') [[clothing]] and [[bedding]] issued to [[sailor]]s
+
+===Transitive verb===
+'''slop''', '''slops''', '''slopped''', '''slopping'''
+#to [[spill]] or [[dump]] liquid
+#:''I slopped water all over my shirt.''
+#to [[feed]] pigs
+
+[[fr:slop]]
