--- a/wiki/bank.wikitext
+++ b/wiki/bank.wikitext
@@ -15,11 +15,12 @@
 #:e.g. a cloud ''bank''
 
 ====Translations====
-*[[Arabic]]: [[مصرف]]
-*[[Chinese]]: [[银行]]/[[銀行]] (yín háng)
+*Arabic: [[مصرف]]
+*Chinese: [[銀行]], [[银行]] (yín háng)
 *[[Breton]]: bank ''m'' ''(business)'', [[ti-bank]] ''m'' ''(place)'' (1), [[bankad]] ''m'' (2), [[glann]] ''f'', [[ribl]] ''m'' (4)
 *[[Catalan]]: [[banc]] ''m''
 *Czech: [[banka]] (1)
+*Danish: [[bred]] ''c''
 *Dutch: bank ''f'' (on this page)
 *[[Esperanto]]: [[banko]]
 *Finnish: [[pankki]] (1,2), [[varasto]] (2), [[ranta]] (4)
