--- a/wiki/broad.wikitext
+++ b/wiki/broad.wikitext
@@ -1,3 +1,4 @@
+{{rfc}}
 === Adjective ===
 #A [[long]] distance of occupied area in the [[horizontal]] dimension.  Usually with regards to an [[object]].
 #(of a person or object) Wide
